test/inputs/toplevel/good/for-multiline-array-index.miros
for element <- @⟨@index:
    one,
    two,
    three
  ⟩
