test/inputs/toplevel/bad/underindented-block-element.miros
block
  for i <- @⟨⟩
 for j <- @⟨⟩
